--- a/css/a.scss
+++ b/css/a.scss
@@ -127,9 +127,4 @@ canvas#myCanvas{
     }
   }
 
-  .name{
-    p{
-      color: blue;
-    }
-    color: blue;
-  }
+p.example1 { color: #ff0000; }
