--- a/css/a.css
+++ b/css/a.css
@@ -104,9 +104,7 @@ canvas#myCanvas {
   .container .copyright {
     width: 30%; }
 
-.name {
-  color: blue; }
-  .name p {
-    color: blue; }
+p.example1 {
+  color: #ff0000; }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=a.css.map */
