--- a/css/a.css
+++ b/css/a.css
@@ -1,14 +1,5 @@
 a:link {
-  color: #000; }
-
-a:visited {
-  color: #000; }
-
-a:hover {
-  color: #000; }
-
-a:active {
-  color: #000; }
+  color: red; }
 
 body {
   margin-left: 50px;
@@ -104,7 +95,7 @@ canvas#myCanvas {
   .container .copyright {
     width: 30%; }
 
-p.example1 {
-  color: #ff0000; }
+.test_span {
+  color: green; }
 
 /*# sourceMappingURL=a.css.map */
